--- a/style.css
+++ b/style.css
@@ -247,7 +247,8 @@ pre{
 .toastNotify{
     position: fixed;
     top: -5rem;
-    left: 0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
     height: 2.5rem;
     min-width: 7rem;
     padding-left: 0.7rem;
@@ -261,7 +262,6 @@ pre{
     border-radius: 5px;
     z-index: 1000;
     border: 2px solid rgb(0, 0, 0);
-
 }
 
 .toastNotify.animate{
@@ -273,10 +273,10 @@ pre{
         top: -5rem;
     }
     10%{
-        top: 0.5rem;
+        top: 0rem;
     }
     90%{
-        top: 0.5rem;
+        top: 0rem;
     }
     100%{
         top: -5rem;
@@ -385,6 +385,7 @@ pre{
     .toastNotify{
         position: fixed;
         top: -5rem;
+        transform: translateX(0);
         left: 0.5rem;
         right: 0.5rem;
         height: 2.5rem;
@@ -401,6 +402,20 @@ pre{
         z-index: 1000;
         border: 2px solid rgb(0, 0, 0);
     
+    }
+    @keyframes popping {
+        0%{
+            top: -5rem;
+        }
+        10%{
+            top: 0.5rem;
+        }
+        90%{
+            top: 0.5rem;
+        }
+        100%{
+            top: -5rem;
+        }
     }
     .menubtn-bar{
         display: flex;
