--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ header{
     align-items: center;
     z-index: 999;
     overflow: hidden;
+    transition: 0.1s all ease;
+}
+header.light{
+    background-color: rgb(116, 188, 255);
+    color: black;
+    transition: 0.1s all ease;
 }
 .bar{
     display: none;
@@ -52,11 +58,12 @@ header{
 .menuitems2{
     display: flex;
     height: 100%;
-    width: 15rem;
+    width: 22rem;
     margin-right: 5rem;
     justify-content: space-between;
     align-items: center;
 }
+
 
 .icons{
     font-size: 1.4rem;
@@ -100,7 +107,13 @@ header{
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
 }
-.content, .contentOut{
+.container.light{
+    background-color: rgb(173, 173, 173);
+    border-top: 1px solid rgb(80, 80, 80);
+    border-bottom: 1px solid rgb(80, 80, 80);
+}
+
+.content{
     min-height: 75.8vh;
     width: 97.7%;
     align-self: center;
@@ -112,7 +125,14 @@ header{
     padding: 0.5rem;
     outline: none;
     border-radius: 5px;
+    transition: 0.1s all ease;
 }
+.content.light{
+    background-color: rgb(255, 255, 255);
+    color: black;
+    transition: 0.1s all ease;
+}
+
 .btn{
     cursor: pointer;
     height: 2rem;
@@ -125,7 +145,11 @@ header{
     margin-left: 0.225rem;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
+.btn.light{
+    background-color: rgb(0, 71, 71);
+    color: white;
+    
+}
 
 .btn:active{
     background-color: rgb(0, 179, 179);
